changed some of the index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		</div>
 	</div>
 	<div data-testid="hero-img" class="mb-10 flex w-1/2 items-center justify-center">
-		<img alt="Coding girl" width="600" height="600" src="/assets/codinggirl.png" loading="eager" decoding="async">
+		<img alt="Coding girl" width="600" height="600" src="assets/codinggirl.png" loading="eager" decoding="async">
 	</div>
 </section>
 		<section data-testid="about" id="about" class="mb-10 flex flex-col items-center justify-center lg:mb-0 lg:h-screen lg:flex-row">
@@ -127,7 +127,7 @@
 	<article data-testid="card" class="rounded-xl bg-white p-3 shadow-lg duration-100 hover:scale-105 hover:transform hover:shadow-xl">
 		<a href="https://github.com/tannerchayes/ugly-website" aria-label="link to project">
 			<div class="relative flex items-end overflow-hidden rounded-xl">
-				<img alt="project image alt text" width="400" height="400" src="/assets/uglyscreenshot.png" loading="eager" decoding="async">
+				<img alt="project image alt text" width="400" height="400" src="assets/uglyscreenshot.png" loading="eager" decoding="async">
 			</div>
 			<div class="mt-1 p-2">
 				<h3 class="text-xl text-orange lg:text-2xl">Ugly Website</h3>
@@ -142,7 +142,7 @@
 	<article data-testid="card" class="rounded-xl bg-white p-3 shadow-lg duration-100 hover:scale-105 hover:transform hover:shadow-xl">
 		<a href="https://github.com/tannerchayes/pixperf" aria-label="link to project">
 			<div class="relative flex items-end overflow-hidden rounded-xl">
-				<img alt="project image alt text" width="400" height="400" src="/assets/pixscreenshot.png" loading="eager" decoding="async">
+				<img alt="project image alt text" width="400" height="400" src="assets/pixscreenshot.png" loading="eager" decoding="async">
 			</div>
 			<div class="mt-1 p-2">
 				<h3 class="text-xl text-orange lg:text-2xl">Pixel Perfect</h3>
@@ -157,7 +157,7 @@
 	<article data-testid="card" class="rounded-xl bg-white p-3 shadow-lg duration-100 hover:scale-105 hover:transform hover:shadow-xl">
 		<a href="https://github.com/tannerchayes/flask_server" aria-label="link to project">
 			<div class="relative flex items-end overflow-hidden rounded-xl">
-				<img alt="project image alt text" width="400" height="400" src="/assets/flaskscreenshot.png" loading="eager" decoding="async">
+				<img alt="project image alt text" width="400" height="400" src="assets/flaskscreenshot.png" loading="eager" decoding="async">
 			</div>
 			<div class="mt-1 p-2">
 				<h3 class="text-xl text-orange lg:text-2xl">Flask Server</h3>
@@ -172,7 +172,7 @@
 	<article data-testid="card" class="rounded-xl bg-white p-3 shadow-lg duration-100 hover:scale-105 hover:transform hover:shadow-xl">
 		<a href="https://github.com/tannerchayes/flask_server" aria-label="link to project">
 			<div class="relative flex items-end overflow-hidden rounded-xl">
-				<img alt="project image alt text" width="400" height="400" src="/assets/blogscreenshot.png" loading="eager" decoding="async">
+				<img alt="project image alt text" width="400" height="400" src="assets/blogscreenshot.png" loading="eager" decoding="async">
 			</div>
 			<div class="mt-1 p-2">
 				<h3 class="text-xl text-orange lg:text-2xl">Django Blog</h3>
@@ -187,7 +187,7 @@
 	<article data-testid="card" class="rounded-xl bg-white p-3 shadow-lg duration-100 hover:scale-105 hover:transform hover:shadow-xl">
 		<a href="https://github.com/tannerchayes/flask_server" aria-label="link to project">
 			<div class="relative flex items-end overflow-hidden rounded-xl">
-				<img alt="project image alt text" width="400" height="400" src="/assets/pollscreenshot.png" loading="eager" decoding="async">
+				<img alt="project image alt text" width="400" height="400" src="assets/pollscreenshot.png" loading="eager" decoding="async">
 			</div>
 			<div class="mt-1 p-2">
 				<h3 class="text-xl text-orange lg:text-2xl">Django Poll</h3>
